--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,7 +39,7 @@ jobs:
         jupyter server extension list 2>&1 | grep -ie "presentpy_jupyter.*OK"
 
         jupyter labextension list
-        jupyter labextension list 2>&1 | grep -ie "presentpy_js.*OK"
+        jupyter labextension list 2>&1 | grep -ie "presentpy_jupyter.*OK"
         python -m jupyterlab.browser_check
 
     - name: Package the extension
@@ -84,7 +84,7 @@ jobs:
         jupyter server extension list 2>&1 | grep -ie "presentpy_jupyter.*OK"
 
         jupyter labextension list
-        jupyter labextension list 2>&1 | grep -ie "presentpy_js.*OK"
+        jupyter labextension list 2>&1 | grep -ie "presentpy_jupyter.*OK"
         python -m jupyterlab.browser_check --no-browser-test
 
 
