--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "presentpy_js",
+    "name": "presentpy_jupyter",
     "version": "0.1.0",
     "description": "A JupyterLab extension.",
     "keywords": [
