--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -4,7 +4,7 @@ _src_path: https://github.com/jupyterlab/extension-template
 author_email: antonio.feregrino@gmail.com
 author_name: Antonio Feregrino
 has_binder: false
-has_settings: false
+has_settings: true
 kind: server
 labextension_name: presentpy_jupyter
 project_short_description: A JupyterLab extension.
