--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,6 +2,7 @@ name: Release
 
 env:
   PIP_VERSION: "23.0.0"
+  PYTHON_VERSION: "3.10"
 
 on:
   push:
@@ -17,10 +18,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python
-      uses: actions/setup-python@v2
+
+    - name: Base Setup
+      uses: jupyterlab/maintainer-tools/.github/actions/base-setup@v1
       with:
-        python-version: "3.10"
+        python_version: ${{ env.PYTHON_VERSION }}
 
     - name: Install dependencies
       run: |
